--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,23 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+---
+default:
+  adapter: 'postgresql'
+  encoding: unicode
+  pool: <%= ENV["DB_POOL"] || 5 %>
 
 development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: 'postgresql'
+  database: spot_hyper_development
+  encoding: unicode
+  pool: <%= ENV["DB_POOL"] || 5 %>
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: 'postgresql'
+  database: spot_hyper_production
+  encoding: unicode
+  pool: <%= ENV["DB_POOL"] || 50 %>
+
+staging:
+  adapter: 'postgresql'
+  database: spot_hyper_staging
+  encoding: unicode
+  pool: <%= ENV["DB_POOL"] || 50 %>
